tests/rustdoc-ui/error-in-impl-trait/generic-argument.rs
trait ValidTrait {}

/// This has docs
pub fn f() -> impl ValidTrait {
    Vec::<DoesNotExist>::new()
    //~^ ERROR: cannot find type `DoesNotExist` in this scope
}
